# test-bsc

./: Cargo.toml
res/: BEP20.json
src/: main.rs
