[package]
name = "test-bsc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git" }
rustc-serialize = "0.3.24"
serde_json = "1.0.68"
thiserror = "1.0.30"
hyper = "0.14.13"
serde = "1.0.130"
ethabi = "15.0.0"
tokio = "1.12.0"
web3 = "0.17.0"
url = "2.2.2"
log = "0.4.0"
